Add the test/docs pipeline to several packages

--- a/R.yaml
+++ b/R.yaml
@@ -2,7 +2,7 @@
 package:
   name: R
   version: "4.4.3"
-  epoch: 0
+  epoch: 1
   description: Language and environment for statistical computing
   copyright:
     - license: ( GPL-2.0-only OR GPL-3.0-only ) AND LGPL-2.1-or-later
@@ -163,6 +163,9 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/share/doc/
           mv "${{targets.destdir}}"/usr/share/doc/* "${{targets.subpkgdir}}"/usr/share/doc/
     description: R manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
