--- a/libb64-1.2.yaml
+++ b/libb64-1.2.yaml
@@ -43,6 +43,9 @@ subpackages:
       - runs: |
           install -Dm 0644 README LICENSE -t ${{targets.contextdir}}/usr/share/doc/libb64
           cp -rf examples ${{targets.contextdir}}/usr/share/doc/libb64/
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
