--- a/onetbb.yaml
+++ b/onetbb.yaml
@@ -1,7 +1,7 @@
 package:
   name: onetbb
   version: 2022.0.0
-  epoch: 1
+  epoch: 2
   description: oneAPI Threading Building Blocks
   copyright:
     - license: GPL-2.0-only
@@ -68,6 +68,9 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/share/doc/TBB
           mv "${{targets.destdir}}"/usr/share/doc/TBB/README.md "${{targets.subpkgdir}}"/usr/share/doc/TBB/README.md
     description: onetbb readme
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
