--- a/dbus.yaml
+++ b/dbus.yaml
@@ -1,7 +1,7 @@
 package:
   name: dbus
   version: "1.16.2"
-  epoch: 1
+  epoch: 2
   description: Freedesktop.org message bus system
   copyright:
     - license: AFL-2.1 OR GPL-2.0-or-later
@@ -52,6 +52,9 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/share
           mv ${{targets.destdir}}/usr/share/doc ${{targets.subpkgdir}}/usr/share
     description: dbus manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
   - name: dbus-libs
     pipeline:
