--- a/git.yaml
+++ b/git.yaml
@@ -1,7 +1,7 @@
 package:
   name: git
   version: "2.48.1"
-  epoch: 1
+  epoch: 2
   description: "distributed version control system"
   copyright:
     - license: GPL-2.0-or-later
@@ -122,6 +122,9 @@ subpackages:
         runs: |
           mkdir -p "${{targets.contextdir}}"/usr/share/man
           mv man1 man5 man7 "${{targets.contextdir}}"/usr/share/man
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
