--- a/libcap.yaml
+++ b/libcap.yaml
@@ -1,7 +1,7 @@
 package:
   name: libcap
   version: "2.75"
-  epoch: 1
+  epoch: 2
   description: "POSIX 1003.1e capabilities"
   copyright:
     - license: BSD-3-Clause OR GPL-2.0-only
@@ -76,6 +76,9 @@ subpackages:
       - runs: |
           set -x
           rm -rf "${{targets.destdir}}/usr/share"
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
