--- a/libxmu.yaml
+++ b/libxmu.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxmu
   version: 1.2.1
-  epoch: 1
+  epoch: 2
   description: X11 miscellaneous micro-utility library
   copyright:
     - license: MIT
@@ -65,6 +65,9 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/share
           mv ${{targets.destdir}}/usr/share/doc ${{targets.subpkgdir}}/usr/share/
     description: libxmu docs
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
