--- a/libxrender.yaml
+++ b/libxrender.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxrender
   version: 0.9.12
-  epoch: 1
+  epoch: 2
   description: X Rendering Extension client library
   copyright:
     - license: XFree86-1.1
@@ -58,6 +58,9 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}/usr/share"
           mv "${{targets.destdir}}/usr/share/doc" "${{targets.subpkgdir}}/usr/share"
     description: libxrender manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
