--- a/nethack.yaml
+++ b/nethack.yaml
@@ -1,7 +1,7 @@
 package:
   name: nethack
   version: 3.6.7
-  epoch: 0
+  epoch: 1
   description: The dungeon exploration game
   copyright:
     - license: NGPL
@@ -76,6 +76,9 @@ subpackages:
           install -dm755 ${{targets.contextdir}}/usr/share/man/man6
           install -dm755 ${{targets.contextdir}}/usr/share/doc/nethack
           install -Dm644 doc/Guidebook.txt ${{targets.contextdir}}/usr/share/doc/nethack/Guidebook.txt
+    test:
+      pipeline:
+        - uses: test/docs
 
 test:
   pipeline:
