--- a/owfs.yaml
+++ b/owfs.yaml
@@ -1,7 +1,7 @@
 package:
   name: owfs
   version: 3.2.4
-  epoch: 1
+  epoch: 2
   description: OWFS — the one-wire filesystem
   copyright:
     - license: GPL-2.0-only
@@ -63,6 +63,9 @@ subpackages:
     pipeline:
       - uses: split/manpages
     description: owfs manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
