--- a/pstack.yaml
+++ b/pstack.yaml
@@ -1,7 +1,7 @@
 package:
   name: pstack
   version: "2.10"
-  epoch: 0
+  epoch: 1
   description: "Print stack traces from running processes, or core files."
   copyright:
     - license: BSD-2-Clause
@@ -67,6 +67,9 @@ subpackages:
           cd "${{targets.destdir}}"
           mkdir -p "${{targets.subpkgdir}}"/usr/share/man/man1/
           mv -f "${{targets.destdir}}"/usr/share/man/man1/pstack.1 "${{targets.subpkgdir}}"/usr/share/man/man1/
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
