--- a/snappy.yaml
+++ b/snappy.yaml
@@ -1,7 +1,7 @@
 package:
   name: snappy
   version: 1.2.1
-  epoch: 1
+  epoch: 2
   description: Fast compression and decompression library
   copyright:
     - license: BSD-3-Clause
@@ -73,6 +73,9 @@ subpackages:
             format_description.txt framing_format.txt; do
             mv "${{targets.destdir}}"/usr/share/doc/snappy/$file "${{targets.subpkgdir}}"/usr/share/doc/snappy/$file
           done
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
