--- a/splunk-otel-collector.yaml
+++ b/splunk-otel-collector.yaml
@@ -1,7 +1,7 @@
 package:
   name: splunk-otel-collector
   version: "0.120.0"
-  epoch: 1
+  epoch: 2
   description: Splunk OpenTelemetry Collector is a distribution of the OpenTelemetry Collector. It provides a unified way to receive, process, and export metric, trace, and log data for Splunk Observability Cloud
   copyright:
     - license: Apache-2.0
@@ -60,6 +60,7 @@ subpackages:
             - ${{package.name}}-doc
       pipeline:
         - runs: ls /usr/share/docs/README.md
+          uses: test/docs
 
   - name: ${{package.name}}-migratecheckpoint
     description: migrate checkpoint package
