--- a/freetds.yaml
+++ b/freetds.yaml
@@ -1,10 +1,15 @@
 package:
   name: freetds
   version: "1.4.26"
-  epoch: 3
+  epoch: 4
   description: FreeTDS is a set of libraries for Unix and Linux that allows programs to natively talk to Microsoft SQL Server and Sybase databases.
   copyright:
     - license: GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - glibc-iconv
+      - glibc-locale-en
+      - glibc-locales
 
 environment:
   contents:
