--- a/clickhouse-25.1.yaml
+++ b/clickhouse-25.1.yaml
@@ -1,6 +1,6 @@
 package:
   name: clickhouse-25.1
-  version: "25.1.6.34"
+  version: "25.1.7.20"
   epoch: 0
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
@@ -41,7 +41,7 @@ pipeline:
     with:
       repository: https://github.com/ClickHouse/ClickHouse
       tag: v${{package.version}}-stable
-      expected-commit: 004003dccf892ea293c9a7edc71321f46f75669d
+      expected-commit: dcc6b0a738416aa7d59be3aaef4e52532457da1e
 
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
@@ -94,8 +94,11 @@ subpackages:
 
 update:
   enabled: true
+  # Do not ignore tags ending with '-lts' or '-stable' we want both.
+  # Modilfy based on upstream release. Guide: https://eng.inky.wtf/docs/teams/sustaining/playbooks/package-updates/clickhouse-version-stream/
   ignore-regex-patterns:
-    - '-stable$'
+    - '-new$'
+    - '-testing'
   git:
     tag-filter-prefix: v25.1.
     strip-prefix: v
