chore: Use recurese submodule in git checkout pipeline
Set Cmake CXX flags to ignore unused result error

As per claude ai: Since this is a logging function, it's common to ignore these return values.

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/clickhouse-25.1.yaml
+++ b/clickhouse-25.1.yaml
@@ -42,6 +42,7 @@ pipeline:
       repository: https://github.com/ClickHouse/ClickHouse
       tag: v${{package.version}}-stable
       expected-commit: dcc6b0a738416aa7d59be3aaef4e52532457da1e
+      recurse-submodules: true
 
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
@@ -49,7 +50,6 @@ pipeline:
       patches: allow_cflags.patch
 
   - runs: |
-      git submodule update --init
       mkdir build
       cd build
       cmake \
@@ -58,6 +58,7 @@ pipeline:
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
         -DCMAKE_INSTALL_LIBDIR=lib \
+        -DCMAKE_CXX_FLAGS="-Wno-unused-result" \
         ..
 
   - runs: |
