--- a/luarocks.yaml
+++ b/luarocks.yaml
@@ -23,10 +23,9 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: fa2736e7c68094710643577b0153dac72ce4bcdc
 
-  - runs: |
-      ./configure --prefix=/usr --with-lua=/usr
-      make build
-      DESTDIR="${{targets.destdir}}" make install
+  - runs: ./configure --prefix=/usr --with-lua=/usr
+  - uses: autoconf/make
+  - uses: autoconf/make-install
 
 update:
   enabled: true
