chore(update): Bump ClickHouse to 24.12.6.70 and refine update rules
- Updated ClickHouse version from 24.12 to 24.12.6.70.
- Updated expected commit to match the latest upstream release.
- Enabled recurse-submodules in git-checkout to ensure all required submodules are cloned.
- Removed redundant git submodule update command from the pipeline as it is now handled by recurse-submodules.
- Refined update rules:
  - Now allows tags ending with -lts and -stable to track stable releases.
  - Added -new$ and -testing to ignore-regex-patterns to exclude unstable releases.
- Reference: ClickHouse update guide https://eng.inky.wtf/docs/teams/sustaining/playbooks/package-updates/clickhouse-version-stream/

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/clickhouse-24.12.yaml
+++ b/clickhouse-24.12.yaml
@@ -1,6 +1,6 @@
 package:
   name: clickhouse-24.12
-  version: "24.12"
+  version: "24.12.6.70"
   epoch: 0
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
@@ -41,7 +41,8 @@ pipeline:
     with:
       repository: https://github.com/ClickHouse/ClickHouse
       tag: v${{package.version}}-stable
-      expected-commit: abbc2854715b478380b9b51aaff820fc9f9d3b48
+      expected-commit: 834cccbc6e8c7f0db21ec500394c3a567b83482f
+      recurse-submodules: true
 
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
@@ -49,7 +50,6 @@ pipeline:
       patches: allow_cflags.patch
 
   - runs: |
-      git submodule update --init
       mkdir build
       cd build
       cmake \
@@ -94,8 +94,11 @@ subpackages:
 
 update:
   enabled: true
+  # Do not ignore tags ending with '-lts' or '-stable' we want both.
+  # Modilfy based on upstream release. Guide: https://eng.inky.wtf/docs/teams/sustaining/playbooks/package-updates/clickhouse-version-stream/
   ignore-regex-patterns:
-    - '-stable$'
+    - '-new$'
+    - '-testing'
   git:
     tag-filter-prefix: v24.12.
     strip-prefix: v
