Update llvm clang version to 19 and add no-unused resutl to avoid errors
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/clickhouse-24.12.yaml
+++ b/clickhouse-24.12.yaml
@@ -19,17 +19,17 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang-17
-      - clang-17-dev
+      - clang-19
+      - clang-19-dev
       - cmake
       - coreutils
       - findutils
       - git
       - grep
-      - llvm-libcxx-17
-      - llvm-libcxx-17-dev
-      - llvm-lld-17
-      - llvm-lld-17-dev
+      - llvm-libcxx-19
+      - llvm-libcxx-19-dev
+      - llvm-lld-19
+      - llvm-lld-19-dev
       - nasm
       - ninja
       - perl
@@ -58,6 +58,7 @@ pipeline:
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
         -DCMAKE_INSTALL_LIBDIR=lib \
+        -DCMAKE_CXX_FLAGS="-Wno-unused-result" \
         ..
 
   - runs: |
