add pkgs in runtime
Signed-off-by: Sanjay Kumar <sanjay.kumar@chainguard.dev>

--- a/node-problem-detector-0.8.yaml
+++ b/node-problem-detector-0.8.yaml
@@ -1,13 +1,15 @@
 package:
   name: node-problem-detector-0.8
   version: 0.8.20
-  epoch: 8
+  epoch: 9
   description: node-problem-detector aims to make various node problems visible to the upstream layers in the cluster management stack.
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
       - busybox
+      - health-checker-0.8=${{package.full-version}}
+      - log-counter-0.8=${{package.full-version}}
       - systemd-dev
     provides:
       - node-problem-detector=${{package.full-version}}
