Fixed read access for entrypoint
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-box.yaml
+++ b/nats-box.yaml
@@ -32,7 +32,7 @@ pipeline:
       mkdir -p ${{targets.destdir}}/etc/profile.d
       mv profile.sh ${{targets.destdir}}/etc/profile.d
       mv entrypoint.sh ${{targets.destdir}}/entrypoint.sh
-      chmod +x ${{targets.destdir}}/entrypoint.sh
+      chmod 777 ${{targets.destdir}}/entrypoint.sh
 
 update:
   enabled: true
