--- a/node-problem-detector-0.8.yaml
+++ b/node-problem-detector-0.8.yaml
@@ -8,8 +8,8 @@ package:
   dependencies:
     runtime:
       - busybox
-      - health-checker-${{vars.major-minor-version}}
-      - log-counter-${{vars.major-minor-version}}
+      - health-checker-${{vars.major-minor-version}}=${{package.full-version}}
+      - log-counter-${{vars.major-minor-version}}=${{package.full-version}}
       - systemd-dev
     provides:
       - node-problem-detector=${{package.full-version}}
