Fix(Build): adds both -Wno-unused-result and -Wno-error=unused-result to prevent the warning from being treated as an error.
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/clickhouse-25.1.yaml
+++ b/clickhouse-25.1.yaml
@@ -58,7 +58,7 @@ pipeline:
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
         -DCMAKE_INSTALL_LIBDIR=lib \
-        -DCMAKE_CXX_FLAGS="-Wno-unused-result" \
+        -DCMAKE_CXX_FLAGS="-Wno-unused-result -Wno-error=unused-result" \
         ..
 
   - runs: |
