--- a/clickhouse-24.12.yaml
+++ b/clickhouse-24.12.yaml
@@ -58,7 +58,7 @@ pipeline:
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
         -DCMAKE_INSTALL_LIBDIR=lib \
-        -DCMAKE_CXX_FLAGS="-Wno-unused-result" \
+        -DCMAKE_CXX_FLAGS="-Wno-unused-result -Wno-error=unused-result" \
         ..
 
   - runs: |
