--- a/ceph.yaml
+++ b/ceph.yaml
@@ -177,32 +177,7 @@ test:
         - systemd
         - docker
         - lvm2-dev
-  pipeline
-  # - name: "Test manager run"
-  #   uses: test/daemon-check-output
-  #   with:
-  #     setup: |
-  #       mkdir -p /tmp/k8s-webhook-server/serving-certs/
-  #       mkcert -install
-  #       mkcert -key-file /tmp/k8s-webhook-server/serving-certs/tls.key -cert-file /tmp/k8s-webhook-server/serving-certs/tls.crt localhost
-  #     start: /usr/bin/manager
-  #     timeout: 30
-  #     expected_output: |
-  #       starting manager
-  #       Starting webhook server
-  #       starting server
-  #       Starting workers
-  #     post: |
-  #       sleep 3
-  #       STATUS=$(curl -k -s -o /dev/null -w "%{http_code}" http://localhost:8081/healthz)
-  #       # Check if the status code is 200, if so exit 0, otherwise exit 1
-  #       if [ "$STATUS" -eq 200 ]; then
-  #           echo "Health check passed with status code 200"
-  #           exit 0
-  #       else
-  #           echo "Health check failed with status code $STATUS"
-  #           exit 1
-  #       fi:
+  pipeline:
     - name: Ensure version build
       runs: |
         ceph --version  | grep ${{package.version}}
