gitlab-cng-17.8: update existing go/bump stanzas

--- a/gitlab-cng-17.8.yaml
+++ b/gitlab-cng-17.8.yaml
@@ -68,11 +68,6 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 364ab3badc0e536078987116094fe02d8cf5262e
 
-  - uses: go/bump
-    with:
-      deps: |-
-        golang.org/x/crypto@v0.35.0
-
   - name: Verify all the vars tags are uptodate with the upstream
     runs: |
       REGISTRY_TAG=$(sed -n 's/.*GITLAB_CONTAINER_REGISTRY_VERSION: *v\([^"]*\).*/\1/p' ./ci_files/variables.yml | sed 's/-gitlab//')
@@ -255,7 +250,9 @@ subpackages:
           mkdir -p "${{targets.contextdir}}"/etc/docker/registry
       - uses: go/bump
         with:
-          deps: github.com/golang-jwt/jwt/v4@v4.5.1
+          deps: |-
+            github.com/golang-jwt/jwt/v4@v4.5.1
+            golang.org/x/crypto@v0.35.0
           modroot: ./container-registry
       - uses: go/build
         with:
@@ -345,6 +342,7 @@ subpackages:
           modroot: ./elasticsearch-indexer
           deps: |-
             golang.org/x/net@v0.33.0
+            golang.org/x/crypto@v0.35.0
       - uses: go/build
         with:
           packages: .
@@ -519,6 +517,7 @@ subpackages:
           modroot: ./shell
           deps: |-
             golang.org/x/net@v0.33.0
+            golang.org/x/crypto@v0.35.0
       - working-directory: ./shell
         runs: |
           make build
