Added missing python build package

--- a/strongswan.yaml
+++ b/strongswan.yaml
@@ -49,6 +49,7 @@ environment:
       - openssl-dev
       - pkgconf-dev
       - py3-supported-pip
+      - py3-supported-build
       - sqlite-dev
   environment:
     CFLAGS: -Wno-error=calloc-transposed-args
