Add a - before uses to clarify output

--- a/at-spi2-core.yaml
+++ b/at-spi2-core.yaml
@@ -113,6 +113,6 @@ test:
         test -f /usr/lib/libatspi.so.0
 
         test -d /usr/share/defaults/at-spi2
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: at-spi2-core
