--- a/aws-c-io.yaml
+++ b/aws-c-io.yaml
@@ -79,7 +79,7 @@ test:
       runs: |
         echo "Verifying aws-c-io installation..."
         find /usr /usr/local -name 'libaws-c-io.so' || (echo "aws-c-io library not found!" && exit 1)
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: aws-c-io
     - name: "Compile and Run aws-c-io Test Program"
