--- a/bluez.yaml
+++ b/bluez.yaml
@@ -160,6 +160,6 @@ test:
         mesh-cfgtest --help
         mpris-proxy --help
         rfcomm --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: bluez
