--- a/boost.yaml
+++ b/boost.yaml
@@ -146,7 +146,7 @@ test:
       runs: |
         b2 -v
         bcp --version
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: boost
     - name: "Test basic header compilation"
