--- a/brew.yaml
+++ b/brew.yaml
@@ -82,6 +82,6 @@ test:
     - runs: |
         . /etc/profile.d/brew.sh
         HOME=/root brew --version
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: brew
