--- a/clamav-1.4.yaml
+++ b/clamav-1.4.yaml
@@ -372,6 +372,6 @@ test:
     - runs: |
         clamsubmit --version
         clamsubmit --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: clamav-1.4
