--- a/clang-15.yaml
+++ b/clang-15.yaml
@@ -325,6 +325,6 @@ test:
     - runs: |
         clang-15 --version
         clang-15 --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: clang-15
