--- a/confluent-docker-utils.yaml
+++ b/confluent-docker-utils.yaml
@@ -91,7 +91,7 @@ test:
         jsonschema --help
         normalizer --version
         normalizer --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: confluent-docker-utils
     - uses: python/import
