--- a/double-conversion.yaml
+++ b/double-conversion.yaml
@@ -57,7 +57,7 @@ test:
         else
           rm ./test && echo "Test Failed!" && exit 1
         fi
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: double-conversion
 
