--- a/fontforge.yaml
+++ b/fontforge.yaml
@@ -170,6 +170,6 @@ test:
         pfadecrypt --help
         sfddiff --help
         woff --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: fontforge
