--- a/freetds.yaml
+++ b/freetds.yaml
@@ -78,7 +78,7 @@ test:
       runs: |
         tsql -C
         fisql -v
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: freetds
     - name: Verify tsql config
