--- a/frr-10.2.yaml
+++ b/frr-10.2.yaml
@@ -117,6 +117,6 @@ test:
         /usr/lib/frr/zebra --version | grep ${{package.version}}
         /usr/lib/frr/bgpd --version | grep ${{package.version}}
         /usr/lib/frr/bfdd --version | grep ${{package.version}}
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: frr-10.2
