--- a/gcc-11.yaml
+++ b/gcc-11.yaml
@@ -274,7 +274,7 @@ test:
         gcov-tool-11 --help
         lto-dump-11 --version
         lto-dump-11 --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: gcc-11
     - name: hello world c
