--- a/geos-3.13.yaml
+++ b/geos-3.13.yaml
@@ -129,6 +129,6 @@ test:
         ./geos_hello_world | grep -q "^Geometry: POINT (1 1)$" || exit 1
         geosop -v
         geosop --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: geos-3.13
