--- a/glib.yaml
+++ b/glib.yaml
@@ -166,6 +166,6 @@ test:
         gio --help
         gio-querymodules --help
         glib-compile-schemas --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: glib
