--- a/gnu-libiconv.yaml
+++ b/gnu-libiconv.yaml
@@ -80,6 +80,6 @@ test:
     - runs: |
         gnu-iconv --version
         gnu-iconv --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: gnu-libiconv
