--- a/google-authenticator.yaml
+++ b/google-authenticator.yaml
@@ -61,7 +61,7 @@ test:
       runs: |
         google-authenticator --version || exit 1
         google-authenticator --help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: google-authenticator
     - name: Init new key test
