--- a/grafana-oncall.yaml
+++ b/grafana-oncall.yaml
@@ -152,7 +152,7 @@ test:
     - name: Check db file
       runs: |
         stat /var/lib/oncall/oncall.db
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: grafana-oncall
     - name: Ensure manage.py works
