--- a/graphviz.yaml
+++ b/graphviz.yaml
@@ -231,6 +231,6 @@ test:
         tred help
         twopi --help
         unflatten help
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: graphviz
