--- a/i2c-tools.yaml
+++ b/i2c-tools.yaml
@@ -120,6 +120,6 @@ test:
         i2cget -V
         i2cset -V
         i2ctransfer -V
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: i2c-tools
