--- a/fmt.yaml
+++ b/fmt.yaml
@@ -68,6 +68,6 @@ test:
         EOF
         g++ -o test_fmt test_fmt.cc -lfmt
         ./test_fmt |grep "hello world"
-      uses: test/tw/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: fmt
