ghostscript: add X libraries to build environment

--- a/ghostscript.yaml
+++ b/ghostscript.yaml
@@ -23,6 +23,9 @@ environment:
       - libjpeg-turbo
       - libpng-dev
       - libtool
+      - libx11-dev
+      - libxext-dev
+      - libxt-dev
       - openjpeg-dev
       - tiff-dev
       - zlib-dev
