add busybox to spark (#45910)
`spark-3.5-scala-2.13` was recently compiled with `-Pkubernetes` to
allow deploying spark in a kubernetes cluster. The jars needed for this
are available in the package and therefore in the image, the absence of
a shell makes it difficult to verify this in a non dev docker image.
This change adds busybox as a runtime dependency to the package.

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -2,7 +2,7 @@
 package:
   name: spark-3.5
   version: "3.5.5"
-  epoch: 5
+  epoch: 6
   description: Unified engine for large-scale data analytics
   copyright:
     - license: Apache-2.0
@@ -74,7 +74,6 @@ subpackages:
         - net-tools
         - logrotate
         - linux-pam
-        - procps
         - libnss
       provides:
         - spark=${{package.full-version}}
@@ -258,6 +257,16 @@ subpackages:
     dependencies:
       runtime:
         - openjdk-${{range.key}}-default-jvm
+        - bash
+        - busybox
+        - procps
+        - posix-libc-utils
+        - tini
+        - tini-compat
+        - net-tools
+        - logrotate
+        - linux-pam
+        - libnss
     pipeline:
       - runs: |
           git stash
