--- a/liquibase-docker.yaml
+++ b/liquibase-docker.yaml
@@ -20,6 +20,10 @@ pipeline:
       repository: https://github.com/liquibase/docker
       tag: v${{package.version}}
       expected-commit: 721daba2f67968383d82ce61e2f6891f444685ee
+  
+  - uses: patch
+    with:
+      patches: liquibase-docker-entrypoint.patch
 
   - runs: |
       # https://github.com/liquibase/docker/blob/main/Dockerfile#L25
