Update verification tests
Signed-off-by: Matthew Ramirez <matthew.ramirez@chainguard.dev>

--- a/liquibase-docker.yaml
+++ b/liquibase-docker.yaml
@@ -43,11 +43,11 @@ test:
     - name: Verify Liquibase entrypoint script is fetched
       runs: |
         # Check if the entrypoint script exists
-        stat /usr/local/bin/docker-entrypoint.sh
+        stat /usr/share/java/liquibase/docker-entrypoint.sh
     - name: Validate Liqiubase entrypoint script content
       runs: |
         # Validate the content of the entrypoint script
-        grep -q 'exec /liquibase/liquibase "\$@"' /usr/local/bin/docker-entrypoint.sh
+        grep -q 'exec $LIQUIBASE_HOME/liquibase "\$@"' /usr/share/java/liquibase/docker-entrypoint.sh
     - name: Verify Liquibase docker properties file is fetched
       runs: |
         # Check if the liquibase.docker.properties exists
