--- a/ruby3.2-webfinger.yaml
+++ b/ruby3.2-webfinger.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.2-webfinger
   version: 2.1.2
-  epoch: 7
+  epoch: 8
   description: Ruby WebFinger client library
   copyright:
     - license: MIT
@@ -53,3 +53,8 @@ var-transforms:
     match: ^ruby(\d\.\d+)-.*
     replace: $1
     to: rubyMM
+
+test:
+  pipeline:
+    - runs:
+        gem-check
