Adds no-depends and tests
Signed-off-by: Srishti Hegde <srishti.hegde@chainguard.dev>

--- a/luarocks.yaml
+++ b/luarocks.yaml
@@ -5,6 +5,13 @@ package:
   description: "Package manager for Lua modules"
   copyright:
     - license: MIT
+  options:
+    no-depends: true
+  dependencies:
+    runtime:
+      - curl
+      - gcc
+      - luajit
 
 environment:
   contents:
@@ -37,6 +44,12 @@ update:
     use-tag: true
 
 test:
+  environment:
+    contents:
+      packages:
+        - luajit-dev
+        - glibc-dev
   pipeline:
     - runs: |
         luarocks --version
+        luarocks install luasocket
