rename documentation subpackage to test-doc in ceph.yaml

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -156,7 +156,7 @@ subpackages:
     pipeline:
       - uses: split/dev
 
-  - name: ${{package.name}}-doc
+  - name: ${{package.name}}-test-doc
     pipeline:
       - uses: split/manpages
     description: ceph manpages
