kubernetes-dashboard: add modroot to go/bump

--- a/kubernetes-dashboard.yaml
+++ b/kubernetes-dashboard.yaml
@@ -31,6 +31,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+      modroot: modules/web
 
   - working-directory: modules/web
     runs: |
