--- a/ruby3.2-tzinfo-data.yaml
+++ b/ruby3.2-tzinfo-data.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.2-tzinfo-data
   version: "1.2025.1"
-  epoch: 0
+  epoch: 1
   description: TZInfo::Data contains data from the IANA Time Zone database packaged as Ruby modules for use with TZInfo.
   copyright:
     - license: MIT
@@ -52,3 +52,7 @@ var-transforms:
     match: ^ruby(\d\.\d+)-.*
     replace: $1
     to: rubyMM
+
+test:
+  pipeline:
+    - uses: gem-check
