add dash-binsh to oci-entrypoint
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -42,6 +42,9 @@ subpackages:
 
   - name: ${{package.name}}-oci-entrypoint
     description: Entrypoint for ${{package.name}}
+    dependencies:
+      runtime:
+        - dash-binsh
     pipeline:
       - runs: |
           install -m755 cicd/assets/entrypoint.sh ${{targets.contextdir}}/entrypoint.sh
