add ldflags back
Signed-off-by: Rakshit Gondwal <rakshit.gondwal@chainguard.dev>

--- a/prometheus-3.2.yaml
+++ b/prometheus-3.2.yaml
@@ -41,6 +41,8 @@ pipeline:
       GOLDFLAGS="-X github.com/prometheus/common/version.Version=${{package.version}}
         -X github.com/prometheus/common/version.Revision=WolfiLinux
         -X github.com/prometheus/common/version.Branch=master
+        -X github.com/prometheus/common/version.BuildUser=$USER@$HOSTNAME
+        -X github.com/prometheus/common/version.BuildDate=$(date -u "+%Y%m%d-%H:%M:%S" ${SOURCE_DATE_EPOCH:+-d @$SOURCE_DATE_EPOCH})
       "
       if [ -n "$LDFLAGS" ]; then
         # LDFLAGS (and only LDFLAGS) should be passed to -extldflags.
