Use split/manpages and test/docs with multiple packages

--- a/binutils.yaml
+++ b/binutils.yaml
@@ -2,7 +2,7 @@
 package:
   name: binutils
   version: "2.44"
-  epoch: 0
+  epoch: 1
   description: "GNU binutils"
   copyright:
     - license: GPL-3.0-or-later
@@ -85,6 +85,14 @@ subpackages:
         - runs: |
             ld.gold --version
             ld.gold --help
+
+  - name: binutils-doc
+    description: binutils documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
