--- a/ca-certificates.yaml
+++ b/ca-certificates.yaml
@@ -2,7 +2,7 @@ package:
   name: ca-certificates
   # manual: update java-cacerts
   version: "20241121"
-  epoch: 1
+  epoch: 2
   description: "CA certificates from the Mozilla trusted root program"
   copyright:
     - license: MPL-2.0 AND MIT
@@ -73,6 +73,14 @@ subpackages:
           # Provide RHEL compatible location for the bundle (fixes compat with fluent-bit)
           mkdir -p ${{targets.subpkgdir}}/etc/ssl/certs/
           ln -s ca-certificates.crt ${{targets.subpkgdir}}/etc/ssl/certs/ca-bundle.crt
+
+  - name: ca-certificates-doc
+    description: ca-certificates documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 test:
   environment:
