--- a/ccache.yaml
+++ b/ccache.yaml
@@ -1,7 +1,7 @@
 package:
   name: ccache
   version: "4.11"
-  epoch: 0
+  epoch: 1
   description: Fast C/C++ compiler cache
   copyright:
     - license: GPL-3.0-or-later
@@ -55,3 +55,12 @@ test:
     - runs: |
         ccache --version
         ccache --help
+
+subpackages:
+  - name: ccache-doc
+    description: ccache documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
