--- a/byobu.yaml
+++ b/byobu.yaml
@@ -1,7 +1,7 @@
 package:
   name: byobu
   version: "6.12"
-  epoch: 3
+  epoch: 4
   description: "open source text-based window manager and terminal multiplexer"
   copyright:
     - license: GPL-3.0-or-later
@@ -53,3 +53,12 @@ test:
         byobu-enable
         byobu-disable
         byobu-janitor -f
+
+subpackages:
+  - name: byobu-doc
+    description: byobu documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
