Use split/manpages and test/docs with multiple packages

--- a/clang-17.yaml
+++ b/clang-17.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-17
   version: 17.0.6
-  epoch: 3
+  epoch: 4
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -271,6 +271,14 @@ subpackages:
       runtime:
         - libLLVM-17
         - libclang-cpp-17
+
+  - name: clang-17-doc
+    description: clang-17 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
