--- a/clang-18.yaml
+++ b/clang-18.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-18
   version: 18.1.8
-  epoch: 6
+  epoch: 7
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -266,6 +266,14 @@ subpackages:
       runtime:
         - libLLVM-18
         - libclang-cpp-18
+
+  - name: clang-18-doc
+    description: clang-18 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 test:
   pipeline:
