--- a/clang-15.yaml
+++ b/clang-15.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-15
   version: 15.0.7
-  epoch: 7
+  epoch: 8
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -310,6 +310,14 @@ subpackages:
       runtime:
         - libLLVM-15
         - libclang-cpp-15
+
+  - name: clang-15-doc
+    description: clang-15 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
