--- a/clang-16.yaml
+++ b/clang-16.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-16
   version: 16.0.6
-  epoch: 6
+  epoch: 7
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -268,6 +268,14 @@ subpackages:
       runtime:
         - libLLVM-16
         - libclang-cpp-16
+
+  - name: clang-16-doc
+    description: clang-16 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
