--- a/pipelines/test/tw/ldd-check.yaml
+++ b/pipelines/test/tw/ldd-check.yaml
@@ -15,6 +15,12 @@ inputs:
       Use "none" to disable the default package check.
     required: false
     default: "${{context.name}}"
+  extra-library-paths:
+    description: |
+      Prepend the provided string to the LD_LIBRARY_PATH.
+      For more than one path, use a ":" delimited string.
+    required: false
+    default: ""
   verbose:
     description: |
       Should the full ldd output be shown
@@ -27,4 +33,5 @@ pipeline:
       ldd-check \
           --files="${{inputs.files}}" \
           --packages="${{inputs.packages}}" \
+          --extra-library-paths="${{inputs.extra-library-paths}}" \
           --verbose="${{inputs.verbose}}"
