--- a/tw.yaml
+++ b/tw.yaml
@@ -66,7 +66,7 @@ subpackages:
         - busybox
     pipeline:
       - runs: |
-          make -C header-check MELANGE_CONTEXTDIR=${{targets.contextdir}} melange-install
+          make -C gem-check MELANGE_CONTEXTDIR=${{targets.contextdir}} melange-install
     test:
       pipeline:
         - runs: |
