Use split/manpages and test/docs with multiple packages

--- a/collectd.yaml
+++ b/collectd.yaml
@@ -6,7 +6,7 @@
 package:
   name: collectd
   version: 5.12.0
-  epoch: 6
+  epoch: 7
   description: "The system statistics collection daemon."
   copyright:
     - license: MIT
@@ -185,3 +185,12 @@ test:
         collectdmon --version
         collectdmon --help
     - uses: test/pkgconf
+
+subpackages:
+  - name: collectd-doc
+    description: collectd documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
