--- a/doxygen.yaml
+++ b/doxygen.yaml
@@ -1,7 +1,7 @@
 package:
   name: doxygen
   version: "1.13.2"
-  epoch: 0
+  epoch: 1
   description: A documentation system for C++, C, Java, IDL and PHP
   copyright:
     - license: GPL-2.0-or-later
@@ -51,3 +51,12 @@ test:
     - runs: |
         doxygen --version
         doxygen --help
+
+subpackages:
+  - name: doxygen-doc
+    description: doxygen documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
