--- a/dpkg.yaml
+++ b/dpkg.yaml
@@ -1,7 +1,7 @@
 package:
   name: dpkg
   version: "1.22.18"
-  epoch: 0
+  epoch: 1
   description: "The Debian Package Manager"
   copyright:
     - license: GPL-2.0-or-later
@@ -114,6 +114,14 @@ subpackages:
             dpkg-vendor --version
             dpkg-vendor --help
         - uses: test/pkgconf
+
+  - name: dpkg-doc
+    description: dpkg documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
