--- a/exiftool.yaml
+++ b/exiftool.yaml
@@ -1,7 +1,7 @@
 package:
   name: exiftool
   version: "13.25"
-  epoch: 0
+  epoch: 1
   description: ExifTool meta information reader/writer
   copyright:
     - license: GPL-3.0-only
@@ -46,3 +46,12 @@ test:
     - runs: |
         exiftool --version
         exiftool --help
+
+subpackages:
+  - name: exiftool-doc
+    description: exiftool documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
