--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -1,7 +1,7 @@
 package:
   name: dhclient
   version: 4.4.3
-  epoch: 20
+  epoch: 21
   description: dhcp client program
   copyright:
     - license: BSD-2-Clause
@@ -81,3 +81,12 @@ test:
         dhcpd --help
         dhcrelay --version
         dhcrelay --help
+
+subpackages:
+  - name: dhclient-doc
+    description: dhclient documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
