--- a/dropbear.yaml
+++ b/dropbear.yaml
@@ -1,7 +1,7 @@
 package:
   name: dropbear
   version: "2025.87"
-  epoch: 0
+  epoch: 1
   description: "small SSH 2 client/server designed for small memory environments"
   copyright:
     - license: MIT
@@ -58,6 +58,14 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/dropbearconvert "${{targets.subpkgdir}}"/usr/bin/
+
+  - name: dropbear-doc
+    description: dropbear documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
