--- a/iperf3.yaml
+++ b/iperf3.yaml
@@ -1,7 +1,7 @@
 package:
   name: iperf3
   version: "3.18"
-  epoch: 2
+  epoch: 3
   description: A tool to measure IP bandwidth using UDP or TCP
   copyright:
     - license: BSD-3-Clause-LBNL
@@ -56,6 +56,14 @@ subpackages:
         - uses: test/tw/ldd-check
           with:
             packages: ${{subpkg.name}}
+
+  - name: iperf3-doc
+    description: iperf3 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
