--- a/jitterentropy-rngd.yaml
+++ b/jitterentropy-rngd.yaml
@@ -1,7 +1,7 @@
 package:
   name: jitterentropy-rngd
   version: 1.2.8
-  epoch: 2
+  epoch: 3
   description: Jitterentropy RNGd
   copyright:
     - license: GPL-2.0-only
@@ -44,3 +44,12 @@ test:
   pipeline:
     - runs: |
         jitterentropy-rngd --version 2>&1 | grep ${{package.version}}
+
+subpackages:
+  - name: jitterentropy-rngd-doc
+    description: jitterentropy-rngd documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
