--- a/libssh2.yaml
+++ b/libssh2.yaml
@@ -1,7 +1,7 @@
 package:
   name: libssh2
   version: 1.11.1
-  epoch: 0
+  epoch: 1
   description: "A library implementing the SSH2 protocol as defined by Internet Drafts"
   copyright:
     - license: BSD-3-Clause
@@ -42,6 +42,14 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+
+  - name: libssh2-doc
+    description: libssh2 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
