--- a/libtermkey.yaml
+++ b/libtermkey.yaml
@@ -1,7 +1,7 @@
 package:
   name: libtermkey
   version: "0.22"
-  epoch: 5
+  epoch: 6
   description: "Library for easy processing of keyboard entry from terminal-based programs"
   copyright:
     - license: MIT
@@ -45,6 +45,14 @@ subpackages:
         - uses: test/tw/ldd-check
           with:
             packages: libtermkey-dev
+
+  - name: libtermkey-doc
+    description: libtermkey documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
