Use split/manpages and test/docs with multiple packages

--- a/perl-pod-coverage.yaml
+++ b/perl-pod-coverage.yaml
@@ -2,7 +2,7 @@
 package:
   name: perl-pod-coverage
   version: "0.23"
-  epoch: 4
+  epoch: 5
   description: Perl - Checks if the documentation of a module is comprehensive
   copyright:
     - license: GPL-1.0-or-later OR Artistic-1.0-Perl
@@ -58,3 +58,12 @@ test:
         d=/$(dirname $(apk info -qL openssl-dbg | grep MANIFEST$))
         cd "$d"
         pod_cover
+
+subpackages:
+  - name: perl-pod-coverage-doc
+    description: perl-pod-coverage documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
