--- a/nano.yaml
+++ b/nano.yaml
@@ -1,7 +1,7 @@
 package:
   name: nano
   version: "8.3"
-  epoch: 0
+  epoch: 1
   description: "The Nano package contains a small, simple text editor which aims to replace Pico, the default editor in the Pine package."
   copyright:
     - license: LGPL-2.1-or-later
@@ -51,3 +51,12 @@ update:
   enabled: true
   release-monitor:
     identifier: 2046
+
+subpackages:
+  - name: nano-doc
+    description: nano documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
