--- a/nvtop.yaml
+++ b/nvtop.yaml
@@ -1,7 +1,7 @@
 package:
   name: nvtop
   version: 3.1.0
-  epoch: 1
+  epoch: 2
   description: "GPU & Accelerator process monitoring for AMD, Apple, Huawei, Intel, NVIDIA and Qualcomm"
   copyright:
     - license: GPL-3.0-or-later
@@ -50,3 +50,12 @@ test:
     - runs: |
         nvtop --version | grep ${{package.version}}
         nvtop --help
+
+subpackages:
+  - name: nvtop-doc
+    description: nvtop documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
