--- a/ocaml.yaml
+++ b/ocaml.yaml
@@ -1,7 +1,7 @@
 package:
   name: ocaml
   version: 5.3.0
-  epoch: 0
+  epoch: 1
   description: "The core OCaml system: compilers, runtime system, base libraries"
   copyright:
     - license: LGPL-2.1-only WITH OCaml-LGPL-linking-exception
@@ -98,6 +98,14 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ocaml
           mv ${{targets.destdir}}/usr/lib/ocaml/compiler-libs "${{targets.subpkgdir}}"/usr/lib/ocaml
+
+  - name: ocaml-doc
+    description: ocaml documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
