--- a/perl-cpan-requirements-dynamic.yaml
+++ b/perl-cpan-requirements-dynamic.yaml
@@ -1,7 +1,7 @@
 package:
   name: perl-cpan-requirements-dynamic
   version: "0.001"
-  epoch: 2
+  epoch: 3
   description: Perl module for requirements dynamic
   copyright:
     - license: GPL-1.0-or-later OR Artistic-1.0-Perl
@@ -37,3 +37,12 @@ update:
   enabled: true
   release-monitor:
     identifier: 372471
+
+subpackages:
+  - name: perl-cpan-requirements-dynamic-doc
+    description: perl-cpan-requirements-dynamic documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
