--- a/perl-test-simple.yaml
+++ b/perl-test-simple.yaml
@@ -1,7 +1,7 @@
 package:
   name: perl-test-simple
   version: "1.302209"
-  epoch: 0
+  epoch: 1
   description: Basic utilities for writing tests
   copyright:
     - license: GPL-1.0-or-later OR Artistic-1.0-Perl
@@ -61,3 +61,12 @@ update:
   enabled: true
   release-monitor:
     identifier: 11977
+
+subpackages:
+  - name: perl-test-simple-doc
+    description: perl-test-simple documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
