--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -120,6 +120,8 @@ pipeline:
 
   - uses: go/bump
     with:
+      deps: |-
+        golang.org/x/oauth2@v0.27.0
       replaces: github.com/mholt/archiver/v3=github.com/anchore/archiver/v3@v3.5.2
       show-diff: true
 
@@ -130,7 +132,6 @@ pipeline:
       deps: |-
         github.com/docker/distribution@v2.8.3+incompatible
         golang.org/x/crypto@v0.35.0
-        golang.org/x/oauth2@v0.27.0
       show-diff: true
 
   - if: ${{build.arch}} == 'aarch64'
