Use split/manpages and test/docs with multiple packages

--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: "21.1.16"
-  epoch: 1
+  epoch: 2
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -137,6 +137,14 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib/xorg
           mv ${{targets.destdir}}/usr/lib/xorg/protocol.txt ${{targets.subpkgdir}}/usr/lib/xorg/
+
+  - name: xorg-server-doc
+    description: xorg-server documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
