--- a/wabt.yaml
+++ b/wabt.yaml
@@ -1,7 +1,7 @@
 package:
   name: wabt
   version: "1.0.37"
-  epoch: 0
+  epoch: 1
   description: The WebAssembly Binary Toolkit
   copyright:
     - license: Apache-2.0
@@ -45,6 +45,14 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: wabt dev
+
+  - name: wabt-doc
+    description: wabt documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
