--- a/tw.yaml
+++ b/tw.yaml
@@ -1,7 +1,7 @@
 package:
   name: tw
   version: 0.0.6
-  epoch: 0
+  epoch: 1
   description: Testing tools
   options:
     no-provides: true
@@ -29,6 +29,9 @@ pipeline:
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/crypto@v0.35.0
+        golang.org/x/net@v0.36.0
+      modroot: ./tw
 
   # Make the tw binary in the main package so we don't end up with `tw-tw`
   - runs: |
