Use split/manpages and test/docs with multiple packages

--- a/nodejs-20.yaml
+++ b/nodejs-20.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-20
-  version: "20.19.0"
-  epoch: 0
+  version: "20.18.3"
+  epoch: 1
   description: "JavaScript runtime built on V8 engine - LTS version"
   dependencies:
     provides:
@@ -41,7 +41,7 @@ pipeline:
     with:
       repository: https://github.com/nodejs/node.git
       tag: v${{package.version}}
-      expected-commit: bb1a61d8737feff534bb85368dab3b7c554c863d
+      expected-commit: 4819c99baa28bf2c1baf411ba100c467fec3d486
 
   - name: Configure and build
     runs: |
@@ -117,3 +117,12 @@ test:
         console.log(new Intl.NumberFormat('de-DE').format(1234.56));
         EOF
         node testIntl.js | grep '1,234.56' && node testIntl.js | grep '1.234,56' || exit 1
+
+subpackages:
+  - name: nodejs-20-doc
+    description: nodejs-20 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
