--- a/nodejs-16.yaml
+++ b/nodejs-16.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-16
   version: 16.20.2
-  epoch: 9
+  epoch: 10
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -121,3 +121,12 @@ test:
         console.log(new Intl.NumberFormat('de-DE').format(1234.56));
         EOF
         node testIntl.js | grep '1,234.56' && node testIntl.js | grep '1.234,56' || exit 1
+
+subpackages:
+  - name: nodejs-16-doc
+    description: nodejs-16 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
