--- a/nodejs-21.yaml
+++ b/nodejs-21.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-21
   version: 21.7.3
-  epoch: 6
+  epoch: 7
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -115,3 +115,12 @@ test:
         console.log(new Intl.NumberFormat('de-DE').format(1234.56));
         EOF
         node testIntl.js | grep '1,234.56' && node testIntl.js | grep '1.234,56' || exit 1
+
+subpackages:
+  - name: nodejs-21-doc
+    description: nodejs-21 documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
