fixed net and oauth2 cves, added workaround and upgrade for go-control-plane
Signed-off-by: Kyle Steere <kyle.steere@chainguard.dev>

--- a/victoriametrics-cluster.yaml
+++ b/victoriametrics-cluster.yaml
@@ -22,10 +22,19 @@ pipeline:
       repository: https://github.com/VictoriaMetrics/VictoriaMetrics
       tag: v${{package.version}}-cluster
 
+  # removing go.sum
+  # mismatch checksum in go.sum for
+  # "github.com/envoyproxy/go-control-plane/envoy@v1.32.3/go.mod: checksum mismatch"
+  # issue reported here: https://github.com/envoyproxy/go-control-plane/issues/1083
+  - runs: |
+      rm -rf go.sum
+
   - uses: go/bump
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
+        github.com/envoyproxy/go-control-plane/envoy@v1.32.4
 
 subpackages:
   - range: victoria-packages
