--- a/apk-tools.yaml
+++ b/apk-tools.yaml
@@ -1,7 +1,7 @@
 package:
   name: apk-tools
   version: "2.14.10"
-  epoch: 0
+  epoch: 1
   description: "apk-tools (Wolfi package manager)"
   copyright:
     - license: GPL-2.0-only
@@ -23,6 +23,7 @@ environment:
       - openssl-dev
       - scdoc
       - zlib-dev
+      - gcc-11
 
 pipeline:
   - uses: git-checkout
@@ -32,6 +33,7 @@ pipeline:
       expected-commit: 9d074efdc12bc41b5d24190595a5269a770e852a
 
   - runs: |
+      cp /usr/lib/gcc/x86_64-pc-linux-gnu/14/rosetta2-override.spec /etc/gcc_spec_file
       sed -i -e 's:-Werror::' Make.rules
       echo "FULL_VERSION=${{package.version}}-r${{package.epoch}}" > config.mk
 
