Remove entrypoint patch and update verification test
Signed-off-by: Matthew Ramirez <matthew.ramirez@chainguard.dev>

--- a/liquibase-docker.yaml
+++ b/liquibase-docker.yaml
@@ -21,10 +21,6 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 721daba2f67968383d82ce61e2f6891f444685ee
 
-  - uses: patch
-    with:
-      patches: liquibase-docker-entrypoint.patch
-
   - runs: |
       # https://github.com/liquibase/docker/blob/main/Dockerfile#L25
       install -Dm755 docker-entrypoint.sh ${{targets.destdir}}/usr/share/java/liquibase/docker-entrypoint.sh
@@ -47,7 +43,7 @@ test:
     - name: Validate Liqiubase entrypoint script content
       runs: |
         # Validate the content of the entrypoint script
-        grep -q 'exec $LIQUIBASE_HOME/liquibase "\$@"' /usr/share/java/liquibase/docker-entrypoint.sh
+        grep -q 'exec /liquibase/liquibase "\$@"' /usr/share/java/liquibase/docker-entrypoint.sh
     - name: Verify Liquibase docker properties file is fetched
       runs: |
         # Check if the liquibase.docker.properties exists
