use relative sources for openbao symlink targets
Signed-off-by: Kevin Monroe <kevin.monroe@chainguard.dev>

--- a/openbao-k8s.yaml
+++ b/openbao-k8s.yaml
@@ -1,7 +1,7 @@
 package:
   name: openbao-k8s
   version: 1.4.0
-  epoch: 32
+  epoch: 33
   description: First-class support for OpenBao and Kubernetes.
   copyright:
     - license: MPL-2.0
@@ -41,7 +41,7 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
-          ln -sf usr/bin/openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
+          ln -sf openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
     dependencies:
       runtime:
         - merged-bin
