--- a/openbao.yaml
+++ b/openbao.yaml
@@ -1,7 +1,7 @@
 package:
   name: openbao
   version: "2.2.0"
-  epoch: 2
+  epoch: 3
   description: OpenBao exists to provide a software solution to manage, store, and distribute sensitive data including secrets, certificates, and keys.
   copyright:
     - license: MPL-2.0
@@ -52,13 +52,13 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
-          ln -sf usr/bin/bao "${{targets.subpkgdir}}/usr/bin/vault"
+          ln -sf bao "${{targets.subpkgdir}}/usr/bin/vault"
 
           install -m755 ./docker-entrypoint.sh "${{targets.subpkgdir}}/usr/bin/docker-entrypoint.sh"
 
           # The upstream helm chart expects the entrypoint in /usr/local/bin
           mkdir -p "${{targets.subpkgdir}}/usr/local/bin"
-          ln -s usr/bin/docker-entrypoint.sh "${{targets.subpkgdir}}/usr/local/bin/docker-entrypoint.sh"
+          ln -s ../../bin/docker-entrypoint.sh "${{targets.subpkgdir}}/usr/local/bin/docker-entrypoint.sh"
     dependencies:
       provides:
         - ${{package.name}}-entrypoint=${{package.full-version}}
