--- a/tinyproxy.yaml
+++ b/tinyproxy.yaml
@@ -61,6 +61,7 @@ subpackages:
   - name: ${{package.name}}-doc
     pipeline:
       - uses: split/manpages
+      - runs: mv ${{targets.destdir}}/usr/share/doc ${{targets.contextdir}}/usr/share/
     description: ${{package.name}} manpages
     test:
       pipeline:
