--- a/weaviate.yaml
+++ b/weaviate.yaml
@@ -29,6 +29,7 @@ pipeline:
       deps: |-
         golang.org/x/crypto@v0.35.0
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
 
   - runs: |
       GITHASH=$(git rev-parse --short HEAD)
