add a gem-check example, using a list of 'require' modules

--- a/ruby3.4-yajl-ruby.yaml
+++ b/ruby3.4-yajl-ruby.yaml
@@ -2,7 +2,7 @@
 package:
   name: ruby3.4-yajl-ruby
   version: 1.4.3
-  epoch: 2
+  epoch: 3
   description: ruby C bindings for Yajl library
   copyright:
     - license: MIT
@@ -64,3 +64,14 @@ var-transforms:
     match: ^ruby(\d\.\d+)-.*
     replace: $1
     to: rubyMM
+
+test:
+  pipeline:
+    - uses: test/tw/gem-check
+      with:
+        require: |
+          yajl
+          yajl/json_gem
+          yajl/json_gem/encoding
+          yajl/json_gem/parsing
+          yajl/version
