--- a/istio-1.25.yaml
+++ b/istio-1.25.yaml
@@ -32,6 +32,7 @@ pipeline:
     with:
       deps: |-
         github.com/go-jose/go-jose/v3@v3.0.4
+        github.com/go-jose/go-jose/v4@v4.0.5
         golang.org/x/crypto@v0.35.0
         golang.org/x/oauth2@v0.27.0
         golang.org/x/net@v0.36.0
