--- a/llvm.yaml
+++ b/llvm.yaml
@@ -1,7 +1,7 @@
 package:
   name: llvm
   version: "19.1.7"
-  epoch: 2
+  epoch: 3
   description: Low-level virtual machine ${{vars.major-version}} - core frameworks
   copyright:
     - license: Apache-2.0
@@ -566,6 +566,8 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/usr/include
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/lib/${{build.arch}}-unknown-linux-gnu/libc++*.so ${{targets.contextdir}}/usr/lib/
           mv ${{targets.destdir}}/${{vars.llvm-prefix}}/include/c++ ${{targets.contextdir}}/usr/include/
+          cp -r ${{targets.destdir}}/${{vars.llvm-prefix}}/include/${{build.arch}}-unknown-linux-gnu/c++/v1/* ${{targets.contextdir}}/usr/include/c++/v1/
+          rm -r ${{targets.destdir}}/${{vars.llvm-prefix}}/include/${{build.arch}}-unknown-linux-gnu/c++
 
   - name: ${{package.name}}-libunwind1
     description: LLVM libunwind 1
