--- a/nodejs-20.yaml
+++ b/nodejs-20.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-20
   version: "20.19.0"
-  epoch: 0
+  epoch: 1
   description: "JavaScript runtime built on V8 engine - LTS version"
   dependencies:
     provides:
@@ -51,7 +51,7 @@ pipeline:
          common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64"
          ;;
       "x86_64")
-         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -march=x86-64"
+         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -mno-sahf"
          ;;
       esac
       # Compiling with O2 instead of Os increases binary size by ~10%
