--- a/nodejs-21.yaml
+++ b/nodejs-21.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-21
   version: 21.7.3
-  epoch: 6
+  epoch: 7
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -50,7 +50,7 @@ pipeline:
          common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64"
          ;;
       "x86_64")
-         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -march=x86-64"
+         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -mno-sahf"
          ;;
       esac
       # Compiling with O2 instead of Os increases binary size by ~10%
