--- a/nodejs-22.yaml
+++ b/nodejs-22.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-22
   version: "22.14.0" # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 0
+  epoch: 1
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -53,7 +53,7 @@ pipeline:
          common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64"
          ;;
       "x86_64")
-         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -march=x86-64"
+         common_flags="-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -mno-sahf"
          ;;
       esac
 
