--- a/python-3.11.yaml
+++ b/python-3.11.yaml
@@ -1,7 +1,7 @@
 package:
   name: python-3.11
   version: 3.11.11
-  epoch: 3
+  epoch: 4
   description: "the Python programming language"
   copyright:
     - license: PSF-2.0
@@ -61,6 +61,11 @@ pipeline:
 
   - name: Configure
     runs: |
+      # Rosetta Seemingly doesn't support sahf.
+      if [ ${{build.arch}} == 'x86_64' ]; then
+        export CFLAGS='-mno-sahf'
+      fi
+
       ./configure \
          --host=${{host.triplet.gnu}} \
          --build=${{host.triplet.gnu}} \
