--- a/python-3.12.yaml
+++ b/python-3.12.yaml
@@ -1,7 +1,7 @@
 package:
   name: python-3.12
   version: "3.12.9"
-  epoch: 4
+  epoch: 5
   description: "the Python programming language"
   copyright:
     - license: PSF-2.0
@@ -68,6 +68,11 @@ pipeline:
 
   - name: Configure
     runs: |
+      # Rosetta Seemingly doesn't support sahf.
+      if [ ${{build.arch}} == 'x86_64' ]; then
+        export CFLAGS='-mno-sahf'
+      fi
+
       ./configure \
          --host=${{host.triplet.gnu}} \
          --build=${{host.triplet.gnu}} \
