added a few more ruby tests, these with specific requires

--- a/ruby3.4-rspec.yaml
+++ b/ruby3.4-rspec.yaml
@@ -2,7 +2,7 @@
 package:
   name: ruby3.4-rspec
   version: 3.13.0
-  epoch: 1
+  epoch: 2
   description: BDD for Ruby
   copyright:
     - license: MIT
@@ -46,3 +46,11 @@ pipeline:
 vars:
   gem: rspec
   rubyMM: "3.4"
+
+test:
+  pipeline:
+    - uses: test/tw/gem-check
+      with:
+        require: |
+          rspec
+          rspec/version
