added update stanza for ruby3.4-rspec to make ci/cd happier

--- a/ruby3.4-rspec.yaml
+++ b/ruby3.4-rspec.yaml
@@ -47,6 +47,12 @@ vars:
   gem: rspec
   rubyMM: "3.4"
 
+update:
+  enabled: true
+  github:
+    identifier: rspec/rspec-metagem
+    strip-prefix: v
+
 test:
   pipeline:
     - uses: test/tw/gem-check
