--- a/ruby3.3-jruby-openssl.yaml
+++ b/ruby3.3-jruby-openssl.yaml
@@ -2,7 +2,7 @@
 package:
   name: ruby3.3-jruby-openssl
   version: "0.15.3"
-  epoch: 0
+  epoch: 1
   description: JRuby-OpenSSL is an add-on gem for JRuby that emulates the Ruby OpenSSL native library.
   copyright:
     - license: GPL-2.0-or-later AND EPL-1.0 AND LGPL-2.1-or-later
@@ -58,3 +58,19 @@ var-transforms:
     match: ^ruby(\d\.\d+)-.*
     replace: $1
     to: rubyMM
+
+test:
+  pipeline:
+    - uses: test/tw/gem-check
+      with:
+        require: |
+          openssl
+          jopenssl/version
+          openssl/bn
+          openssl/cipher
+          openssl/digest
+          openssl/hmac
+          openssl/marshal
+          openssl/pkcs5
+          openssl/pkey
+          openssl/x509
