--- a/ruby3.3-oj.yaml
+++ b/ruby3.3-oj.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.3-oj
   version: "3.16.10"
-  epoch: 0
+  epoch: 1
   description: The fastest JSON parser and object serializer.
   copyright:
     - license: MIT
@@ -52,3 +52,19 @@ var-transforms:
     match: ^ruby(\d\.\d+)-.*
     replace: $1
     to: rubyMM
+
+test:
+  pipeline:
+    - uses: test/tw/gem-check
+      with:
+        require: |
+          oj
+          oj/bag
+          oj/easy_hash
+          oj/error
+          oj/json
+          oj/mimic
+          oj/saj
+          oj/schandler
+          oj/state
+          oj/version
