Restore change to original test, not part of the additional coverage added here
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/kubernetes-1.32.yaml
+++ b/kubernetes-1.32.yaml
@@ -276,7 +276,7 @@ test:
         kubelet --version
     - name: Test file capabilities
       runs: |
-        getcap /usr/bin/kube-apiserver | grep -q 'cap_net_bind_service=ep'
+        getcap /usr/bin/kube-apiserver | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
     - name: Functional tests
       runs: |
         # Launch an etcd instance. Dependency of kube-api-server (below).
