Updating Layout and Python Versions for Azure CLI

--- a/azure-cli-dev.yaml
+++ b/azure-cli-dev.yaml
@@ -1,5 +1,5 @@
 package:
-  name: az
+  name: azure-cli-dev
   version: "2.70.0"
   epoch: 0
   description: Azure CLI
@@ -7,18 +7,17 @@ package:
     - license: MIT
   dependencies:
     runtime:
-      - py3.10-cryptography #pin to microsoft support python 3.10
-
+      - py3-cryptography #use the latest version 
 environment:
   contents:
     packages:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - py3.10-cryptography #pin to microsoft support python 3.10
-      - py3.10-pip #pin to microsoft support python 3.10
-      - python-3.10 #pin to microsoft support python 3.10
-      - python-3.10-dev #pin to microsoft support python 3.10
+      - py3-cryptography #use the latest version 
+      - py3-pip #use the latest version 
+      - python-3 #use the latest version 
+      - python-3-dev #use the latest version 
 
 pipeline:
   - uses: git-checkout
