--- a/step-ca.yaml
+++ b/step-ca.yaml
@@ -10,7 +10,6 @@ environment:
   contents:
     packages:
       - pcsc-lite-dev
-      - pkgconf-dev
       - step
 
 pipeline:
@@ -36,7 +35,7 @@ pipeline:
       output: step-ca
       ldflags: |
         -X main.Version=${{package.version}}
-        -X main.BuildTime=$(date -u '+%Y-%m-%d %H:%M UTC')
+        -X main.BuildTime=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
 update:
   enabled: true
