Removes attempted go/bump and adds to vendor.mod section of modified deps
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/docker.yaml
+++ b/docker.yaml
@@ -59,11 +59,6 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: bbd0a17ccc67e48d4a69393287b7fcc4f0578683
 
-  - uses: go/bump
-    with:
-      deps: |-
-        golang.org/x/net@v0.36.0
-
   - runs: |
       # moby/moby uses a non-standard `vendor.mod` and helper scripts instead
       # of the standard `go.mod`. the only way to modify dependencies is to
@@ -84,6 +79,7 @@ pipeline:
       sed -i 's|github.com/opencontainers/runc v1.1.13|github.com/opencontainers/runc v1.1.14|' vendor.mod
       sed -i 's|github.com/golang-jwt/jwt/v4 v4.5.0|github.com/golang-jwt/jwt/v4 v4.5.1|' vendor.mod
       sed -i 's|golang.org/x/oauth2 v0.23.0|golang.org/x/oauth2 v0.27.0|' vendor.mod
+      sed -i 's|golang.org/x/net v0.33.0|golang.org/x/oauth2 v0.36.0|' vendor.mod
 
       ./hack/vendor.sh
 
