--- a/strimzi-kafka-operator/pombump-deps.yaml
+++ b/strimzi-kafka-operator/pombump-deps.yaml
@@ -32,4 +32,4 @@ patches:
       version: 4.1.118.Final
     - groupId: org.eclipse.jetty
       artifactId: jetty-server
-      version: 9.4.56
+      version: 9.4.56.v20240826
