--- a/amazon-cloudwatch-agent-operator.yaml
+++ b/amazon-cloudwatch-agent-operator.yaml
@@ -17,8 +17,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/net@v0.36.0
-        github.com/docker/docker@v26.0.0-rc1,
-        25.0.4
+        github.com/docker/docker@v26.0.0+incompatible
 
   - uses: go/build
     with:
