--- a/promxy.yaml
+++ b/promxy.yaml
@@ -27,6 +27,7 @@ pipeline:
         golang.org/x/crypto@v0.35.0
         golang.org/x/net@v0.36.0
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
 
   - uses: go/build
     with:
