--- a/promxy.yaml
+++ b/promxy.yaml
@@ -47,8 +47,25 @@ update:
     strip-prefix: v
 
 test:
+  environment:
+    contents:
+      packages:
+        - curl
+        - wait-for-it
   pipeline:
     - runs: |
         promxy --version
         # test remote_write_exporter by validating specific help parameter exists
         remote_write_exporter --help | grep bind-addr
+    - name: "start daemon on localhost"
+      uses: test/daemon-check-output
+      with:
+        setup: |
+          curl -sLO --retry 3 https://raw.githubusercontent.com/jacksontj/promxy/refs/heads/master/cmd/promxy/config.yaml
+        start: "promxy --config config.yaml --log-level debug"
+        timeout: 30
+        expected_output: |
+          promxy starting
+        post: |
+          wait-for-it -t 10 --strict localhost:8082 -- echo "Server is up"
+          curl -s http://localhost:8082/metrics | grep -qi "prometheus_ready 1"
