use readlink in tests
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/jitterentropy-library.yaml
+++ b/jitterentropy-library.yaml
@@ -12,6 +12,12 @@ environment:
       - build-base
       - busybox
 
+var-transforms:
+  - from: ${{package.version}}
+    match: ^(\d+).*
+    replace: $1
+    to: major-version
+
 pipeline:
   - uses: git-checkout
     with:
@@ -53,8 +59,7 @@ test:
   pipeline:
     - name: Library presence check
       runs: |
-        test -f /usr/lib/libjitterentropy.so.3
-        test -f /usr/lib/libjitterentropy.so.3.6.1
+        test "$(readlink /usr/lib/libjitterentropy.so.${{vars.major-version}})" = "libjitterentropy.so.${{package.version}}"
     - uses: test/tw/ldd-check
       with:
         packages: jitterentropy-library
