add update block for ghostscript-fonts
uses https://release-monitoring.org/project/21444/

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/ghostscript-fonts.yaml
+++ b/ghostscript-fonts.yaml
@@ -22,6 +22,11 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/usr/share/ghostscript
       ln -sfv /usr/share/fonts/Type1 ${{targets.contextdir}}/usr/share/ghostscript/fonts
 
+update:
+  enabled: true
+  release-monitor:
+    identifier: 21444
+
 test:
   pipeline:
     - name: check files
