chore(datadog-agent): remove patch for debugging
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -19,7 +19,7 @@ package:
 
 capabilities:
   add:
-    - CAP_SYS_ADMIN
+    - CAP_SYS_ADMIN # This is needed to run unshare(1).
 
 vars:
   py-version: "3.12"
@@ -106,7 +106,7 @@ pipeline:
   # https://github.com/DataDog/datadog-agent/pull/31426
   - uses: patch
     with:
-      patches: revert-import-python-relatively-instead-of-using-the-patch.patch remove-removed-godebug.patch datadog-debug-001.diff
+      patches: revert-import-python-relatively-instead-of-using-the-patch.patch remove-removed-godebug.patch
 
   # Ensure that we don't run into nvidia GPU issues at runtime.
   - runs: |
