Fix(Build): Update the llvm and clang version to 17
There was a warning  warning Libc++ only supports Clang 17 and later,

Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/istio-envoy-1.25.yaml
+++ b/istio-envoy-1.25.yaml
@@ -24,18 +24,18 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang~15
+      - clang-17
+      - clang-17-dev
       - cmake
       - coreutils
       - git
       - libtool
-      - llvm-libcxx-15
-      - llvm-libcxx-15-dev
-      - llvm-lld-15
-      - llvm15
-      - llvm15-cmake-default
-      - llvm15-dev
-      - llvm15-tools
+      - llvm-libcxx-17
+      - llvm-libcxx-17-dev
+      - llvm-libcxxabi-17
+      - llvm-lld-17
+      - llvm17
+      - llvm17-dev
       - openjdk-11
       - openssl-dev
       - patch
